# ml-ai-torch

./: .gitignore  pyproject.toml  set_programs.sh  set_terminal.sh
digit_recognizer/: digit_recognizer.py
digit_recognizer/layouts/: digit_recognizer.grid.json
