[project]
name = "ml-ai-torch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "marimo[recommended]>=0.13.10",
    "pytest>=8.3.5",
    "python-lsp-server>=1.12.2",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "vegafusion>=2.0.2",
    "vl-convert-python>=1.7.0",
    "websockets>=15.0.1",
]
